# ETSdiff-Test-Snippets

./: .gitignore  README.md  create_ets_db_variant.sh  rules.md  rules.txt
php/: .gitignore  Dockerfile  env.php  ets.toml
php/d1/: docker-compose.yml
php/d1/app/: compliant.php  non-compliant.php
php/s66/: docker-compose.yml
php/s66/app/: compliant.php  non-compliant.php
php/s67/: docker-compose.yml
php/s67/app/: compliant.php  non-compliant.php
php/s69/: docker-compose.yml  ets.yml
php/s69/app/: compliant.php  non-compliant.php
php/s72/: docker-compose.yml
php/s72/app/: compliant.php  non-compliant.php
php/s74/: docker-compose.yml  ets.yml
php/s74/app/: compliant.php  non-compliant.php
php/sql_index/: .gitignore  docker-compose.yml  ets.toml
php/sql_index/app/: query.php
rust/filestorage/: test.sh
rust/filestorage/filesystem/: Cargo.toml
rust/filestorage/filesystem/client/: README.md
rust/filestorage/filesystem/client/src/test/resources/: files.csv  ids.csv
rust/filestorage/filesystem/client/src/test/scala/filesystem/: FileSystemDelete.scala  FileSystemDownload.scala  FileSystemIsUp.scala  FileSystemUpload.scala
rust/filestorage/filesystem/src/: main.rs
tools/: gen_chart.py
